fix mentors layout issue

--- a/src/styles/home.bundle.css
+++ b/src/styles/home.bundle.css
@@ -3814,7 +3814,6 @@ pre.language-curl .line-numbers > span:first-child:before {
 }
 
 .mentor img {
-  float: right;
 }
 
 .description {
